--- a/src/app/student/student.component.html
+++ b/src/app/student/student.component.html
@@ -12,7 +12,7 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="pull-right">
-                <button class="btn btn-success" (click)="open(content)">Add New</button>
+                <button class="btn btn-success">Add New</button>
               </div>
             </div>
           </div>
